# bandexa

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  development.md  privacy.md  roadmap.md
docs/references/: bayes_linear_regression_posterior.md
examples/: 01_synthetic_regret.py  02_mnist_bandit.py  03_two_tower_synthetic.py  README.md  _resnet_backbone.py
src/bandexa/: __init__.py
src/bandexa/buffers/: base.py  disk_dataset.py  disk_replay.py  memory_replay.py
src/bandexa/encoders/: protocols.py
src/bandexa/policies/: neural_linear_ts.py
src/bandexa/posterior/: bayes_linear.py  bayes_logistic.py
tests/: test_base_linear.py  test_blr_checkpoint.py  test_neural_linear_ts.py  test_neural_linear_ts_checkpoint.py
